{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "gameplay",
            "id": "349cdeb3-90b7-439f-94e1-7dd97068363d",
            "actions": [
                {
                    "name": "move",
                    "type": "Button",
                    "id": "383c3674-3ea3-47f2-ad9c-fe84e5289a7e",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "jump",
                    "type": "Button",
                    "id": "61ee4df9-f672-4313-acf5-66d77736e739",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "spin_clock",
                    "type": "Button",
                    "id": "785b8d34-1657-41a3-b42b-3f29bdc03586",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "spin_anti",
                    "type": "Button",
                    "id": "418ee872-3baf-4f0a-a823-14bae6471e55",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "move_com",
                    "type": "Button",
                    "id": "256fd667-5dcd-4916-8a53-03e2b5e336ac",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b153fad1-3da6-4fd9-8526-3ca4e9ceae16",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f0f3c5a2-0f7b-4707-81a8-a7e179ace87b",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c73ed9c2-852a-421d-89bb-688365309630",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "spin_clock",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d9905451-10a7-446e-917c-bb9ccd98742f",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "spin_anti",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "18089e6c-5841-46e4-9be4-48c2976eb0c6",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "move_com",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}